2000-08-04  Peter Williams  <peterw@helixcode.com>

	* camel-store.h: Include camel-object.h. Ettore said this wasn't
	compiling.

2000-08-04  Dan Winship  <danw@helixcode.com>

	* providers/pop3/camel-pop3-store.c: add a debugging macro for
	doing protocol tracing.

2000-08-03  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_new): Only
	call imap_get_summary_internal if the folder can hold messages

	* providers/nntp/camel-nntp-provider.c (camel_provider_module_init): 
	Initialize the service_cache for the news/nntp providers

2000-08-03  Peter Williams  <peterw@helixcode.com>

	* providers/nntp/Makefile.am (INCLUDES): Add -I$(top_srcdir) to
	pull in libibex/ibex.h

2000-08-02  Dan Winship  <danw@helixcode.com>

	* providers/MH: Kill this. It doesn't have any code to do anything
	the new mh provider doesn't do better.

	* providers/Makefile.am: Remove reference to MH subdir, and
	promote nntp to fully-supported status, since it does compile and
	all.

	* camel-mime-message.c (camel_mime_message_set_subject): Trim
	trailing space from the subject. I've now seen replies from two
	different people that tricked the threading code by (a) not having
	References/In-Reply-To, and (b) adding an extra space to the end
	of the subject line so the subject-based threading fails too. Who
	writes these broken mailers anyway?

2000-08-01  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/smtp/camel-smtp-transport.c (smtp_helo): When forced
	to use the IP, place it in square brackets.

	* providers/imap/camel-imap-utils.c (imap_translate_sexp): New and
	improved sexp parser. An honest try at using e-sexp is wrapped in
	a #ifdef at the bottom of the file but is currently not used

	* providers/imap/camel-imap-folder.c (imap_search_by_expression):
	We want to do a UID SEARCH so we get UIDs back instead of sequence
	numbers

2000-08-01  Not Zed  <NotZed@HelixCode.com>

	* providers/mh: New mh provider implementation.
