@@ -1,9 +1,18 @@
 2000-08-04  Peter Williams  <peterw@helixcode.com>
 
+	* providers/imap/camel-imap-store.c (get_folder): Prevent a coredump
+	when get_folder()ing from a store with dir_sep = NULL.
+
+2000-08-04  Peter Williams  <peterw@helixcode.com>
+
 	* camel-store.h: Include camel-object.h. Ettore said this wasn't
 	compiling.
 
 2000-08-04  Dan Winship  <danw@helixcode.com>
+
+	* providers/pop3/camel-pop3-folder.c (pop3_set_message_flags): 
+	(pop3_sync): Indexes into the flags array are message_number minus
+	1, not just message_number.
 
 	* providers/pop3/camel-pop3-store.c: add a debugging macro for
 	doing protocol tracing.
